# twurst

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  stream.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml  README.md
client/src/: lib.rs
error/: Cargo.toml  README.md
error/src/: lib.rs
example/: example_service.proto
example/client/: Cargo.toml  build.rs
example/client/src/: lib.rs  main.rs
example/server/: Cargo.toml  build.rs
example/server/src/: main.rs
integration/: Cargo.toml  build.rs  integration.proto
integration/src/: client.rs  lib.rs  server.rs
integration/tests/: grpc_test.rs  json_test.rs  twirp_test.rs
server/: Cargo.toml  README.md
server/src/: codegen.rs  lib.rs
