[workspace]
members = ["build", "client", "error", "server", "integration", "example/server", "example/client"]
resolver = "2"

[workspace.package]
authors = ["Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.79"

[workspace.dependencies]
axum = { version = "0.7.9", default-features = false }
axum-core-04 = { package = "axum-core", version = "0.4.5" }
eyre = "0.6.10"
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project-lite = "0.2.15"
prost = "0.13.4"
prost-types = "0.13.4"
prost-build = "0.13.4"
prost-reflect = "0.14"
prost-reflect-build = "0.14"
regex = "1.8.1"
reqwest-012 = { package = "reqwest", version = "0.12", default-features = false }
serde = "1.0.217"
serde_json = "1"
tokio = "1.42"
tokio-stream = "0.1.16"
tonic = { version = "0.12.3", default-features = false }
tonic-012 = { package = "tonic", version = "0.12.3", default-features = false }
tonic-build = "0.12.3"
tower-service = "0.3.3"
tower = "0.5.1"
tower-http = "0.6.2"
tracing = "0.1.35"
trait-variant = "0.1.2"
twurst-error = { path = "error", version = "0.1.0" }
