[workspace]
members = [
    "build",
    "client",
    "error",
    "server",
    "integration",
    "example/server",
    "example/client",
]
resolver = "2"

[workspace.package]
authors = ["Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.79"

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
axum-core-05 = { package = "axum-core", version = "0.5.0" }
eyre = "0.6.10"
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project-lite = "0.2.16"
prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
prost-reflect = ">=0.14, <0.16"
prost-reflect-build = ">=0.14, <0.16"
regex = "1.8.1"
reqwest-012 = { package = "reqwest", version = "0.12", default-features = false }
serde = "1.0.219"
serde_json = "1"
tokio = "1.45"
tokio-stream = "0.1.16"
tonic = { version = "0.13", default-features = false }
tonic-012 = { package = "tonic", version = "0.12.3", default-features = false }
tonic-013 = { package = "tonic", version = "0.13", default-features = false }
tonic-build = "0.13"
tower-service = "0.3.3"
tower = "0.5.2"
tower-http = "0.6.4"
tracing = "0.1.35"
trait-variant = "0.1.2"
twurst-error = { path = "error", version = "0.2.2" }
