[workspace]
members = [
    "build",
    "client",
    "error",
    "server",
    "integration",
    "example/server",
    "example/client",
]
resolver = "2"

[workspace.package]
authors = ["Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
axum-core-05 = { package = "axum-core", version = "0.5" }
eyre = "0.6.10"
http = "1.0.1"
http-body = "1"
http-body-util = "0.1"
pin-project-lite = "0.2.16"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
prost-reflect = "0.16"
prost-reflect-build = "0.16"
regex = "1.11.2"
reqwest-012 = { package = "reqwest", version = "0.12", default-features = false }
serde = "1.0.226"
serde_json = "1"
tokio = "1.47"
tokio-stream = "0.1.16"
tonic = { version = "0.14.2", default-features = false }
tonic-014 = { package = "tonic", version = "0.14.2", default-features = false }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower-service = "0.3.3"
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.35"
trait-variant = "0.1.2"
twurst-error = { path = "error", version = "0.3.0" }
