[package]
name = "twurst-client"
description = "Twirp client related code"
keywords = ["Twirp"]
repository = "https://github.com/helsing-ai/twurst"
documentation = "https://docs.rs/twurst-client"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
reqwest-012 = ["dep:reqwest-012"]
twurst-stream = ["dep:tokio-stream"]

[dependencies]
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
pin-project-lite.workspace = true
prost-reflect = { workspace = true, features = ["derive", "serde"] }
reqwest-012 = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
tokio-stream = { workspace = true, optional = true }
tower-service.workspace = true
trait-variant.workspace = true
twurst-error = { workspace = true, features = ["http"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
