[package]
name = "twurst-error"
description = "Twirp error struct"
repository = "https://github.com/helsing-ai/twurst"
documentation = "https://docs.rs/twurst-error"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
axum-07 = ["dep:axum-core-04", "http"]
http = ["dep:http", "dep:serde_json", "serde"]
serde = ["dep:serde"]
tonic-012 = ["dep:tonic-012"]

[dependencies]
axum-core-04 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tonic-012 = { workspace = true, optional = true }
