[package]
name = "twurst-error"
description = "Twirp error struct"
repository = "https://github.com/helsing-ai/twurst"
documentation = "https://docs.rs/twurst-error"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Think to synchronize the README with this list
axum-08 = ["dep:axum-core-05", "http"]
http = ["dep:http", "dep:serde_json", "serde"]
serde = ["dep:serde"]
tonic-014 = ["dep:tonic-014"]

[dependencies]
axum-core-05 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tonic-014 = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
