[package]
name = "twurst-integration"
description = "Integration tests for Twirp"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
twurst-server = { path = "../server", features = ["grpc"] }
twurst-client = { path = "../client", features = ["reqwest-012"] }
axum = { workspace = true, features = ["http1", "tokio"] }
eyre.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
tokio = { workspace = true, features = ["rt"] }
tonic = { workspace = true, features = ["default"] }
tower.workspace = true
tower-http = { workspace = true, features = ["auth", "cors"] }

[build-dependencies]
twurst-build = { path = "../build", features = ["grpc"] }
tonic-build.workspace = true
