[package]
name = "twurst-server"
description = "Twirp server related code"
keywords = ["Twirp"]
repository = "https://github.com/helsing-ai/twurst"
documentation = "https://docs.rs/twurst-server"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
grpc = ["dep:tonic", "dep:tokio-stream", "dep:pin-project-lite"]

[dependencies]
twurst-error = { workspace = true, features = ["axum-07"] }
axum.workspace = true
http-body-util.workspace = true
pin-project-lite = { workspace = true, optional = true }
prost-reflect = { workspace = true, features = ["derive", "serde"] }
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, optional = true, features = ["transport", "prost"] }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
trait-variant.workspace = true

[dev-dependencies]
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower-service.workspace = true
