[package]
name = "twurst-example-client"
description = "Example client for Twurst"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
twurst-client = { path = "../../client", features = ["reqwest-012"] }
eyre.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
twurst-build.path = "../../build"
