[package]
name = "twurst-example-server"
description = "Example server for Twurst"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
twurst-server = { path = "../../server", features = ["grpc"] }
axum = { workspace = true, features = ["http1", "tokio"] }
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["cors"] }

[build-dependencies]
twurst-build = { path = "../../build", features = ["grpc"] }
